implemented updating toPlay methods in potUtil for round and all pots